# claudecode-test-target

./: .gitignore  .iterate-pass-fixture  README.md  pyproject.toml
.claude/plans/: PLAN-01-smoke.md
.github/workflows/: ci.yml
infra/: app.py  cdk.json
infra/stacks/: lambda_stack.py
lambda/cloudtrail_tool/: _guardrails.py  _mcp.py  handler.py
lambda/cloudtrail_tool/tools/: lake.py  lookup.py  summarize.py
src/cloudtrail_agent/: main.py  prompt.py
src/todoapp/: __init__.py  core.py  format.py
tests/: conftest.py  test_agent_prompt.py  test_core.py  test_dispatcher.py  test_integration.py  test_tools_lake.py  test_tools_lookup.py  test_tools_summarize.py
