[project]
name = "todoapp"
version = "0.1.0"
description = "Orchestrator test target — minimal todo library"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todoapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
