[project]
name = "todoapp"
version = "0.1.0"
description = "Orchestrator test target — minimal todo library"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "aws-lambda-powertools>=3.0",
    "strands-agents",
    "bedrock-agentcore",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "moto[cloudtrail]>=5",
    "aws-cdk-lib>=2.150",
    "constructs>=10",
    "aws-xray-sdk>=2.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todoapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lambda", "src"]
